--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html, body {
     display: flex;
     flex-direction: column;
 }
+
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
@@ -28,7 +29,16 @@ body{
     border-top: solid;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
-
+ .email{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    text-align: center;
+    border: solid 2px;
+    padding: 10px;
+    margin: 5px;
+    background-color: aliceblue;
+    border-radius: 10px;
+ }
 .info {
     font-style: italic;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -40,10 +50,7 @@ body{
     border: solid ;
     padding: 3px;
     position: relative;
-    margin: 10px;
-}
-h1, h2 {
-    margin-bottom: 5px; 
+    margin: 0px;
 }
 
 h3{
@@ -51,7 +58,8 @@ h3{
     font-family: 'Times New Roman', Times, serif;
     text-decoration: underline;
     padding: 5px;
-    margin: 5px;
+    margin: 2px;
+    font-size: 17px;
     
 }
 
@@ -67,21 +75,50 @@ h3{
 p{
     text-align: justify;
     padding: 0 15px 0 15px;
-    margin: 5px;
+    margin: 1px;
     font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
 }
 
 .education {
     display: flex;
     justify-content: space-between; 
     font-weight: bold; 
-    font-size: 12px;
+    font-size: 15px;
     font-family: 'Times New Roman', Times, serif;
     padding-left: 15px; 
+    padding-right: 15px;
 }
 
-.university {
-    text-transform: uppercase; 
+.experience {
+    display: flex;
+    justify-content: space-between; 
+    font-weight: bold; 
+    font-size: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 15px; 
+    padding-right: 15px;
+    padding-bottom: 1px;
+}
+
+.certification {
+    display: flex;
+    justify-content: space-between; 
+    font-weight: bold; 
+    font-size: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 15px; 
+    padding-right: 15px;
+    padding-bottom: 1px;
+    margin-top: 2px;
+}
+
+.skills{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 15px;
+    padding-top: 0;
 }
 
 footer{
@@ -91,4 +128,19 @@ footer{
     padding: 10px;
     background-color: aliceblue;
     margin-top: auto;
+    text-decoration: none;
+}
+
+a{
+    text-decoration: none;
+    border: solid 2px;
+    color: black;
+    padding: 2px;
+    border-radius: 10px;
+}
+
+ul{
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 1px;
+    margin-top: 2px;
 }
