--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    background-color: whitesmoke;
+    background-color: grey;
     flex: 1;
     max-width: 900px;
     margin: auto;
@@ -20,9 +20,14 @@ h3{
     text-align: justify;
     font-family: 'Times New Roman', Times, serif;
     text-decoration: underline;
-    padding: 5px;
-    margin: 2px;
+    margin: 5px;
     font-size: 17px;
+    border-radius: 15px 15px 15px 15px;
+    background-color: antiquewhite;
+    border: solid ;
+    padding: 3px;
+    position: relative;
+    text-align: center;
     
 }
 
@@ -43,11 +48,11 @@ p{
     border-radius: 15px;
     margin: 0;
     text-align: center;
-    background-color: aliceblue;
+    background-color: rgb(255, 219, 171);
     padding: 10px;
     border-bottom: solid;
     border-top: solid;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 10px rgba(0, 0, 0, 0.2);
 }
 .email {
     font-family: 'Times New Roman', Times, serif;
@@ -56,7 +61,7 @@ p{
     border: solid 2px;
     padding: 10px;
     margin: 5px;
-    background-color: aliceblue;
+    background-color: rgb(255, 219, 171);
     border-radius: 10px;
     align-content: center;
     display: block; 
@@ -69,12 +74,13 @@ p{
     color: black;   
     font-weight: 500;
     text-align: center;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 15px;
     background-color: antiquewhite;
     border: solid ;
     padding: 3px;
     position: relative;
     margin: 0px;
+    width: auto;
 }
 
 .education {
@@ -117,6 +123,16 @@ p{
     padding-left: 15px;
     padding-top: 0;
 }
+
+.pborder {
+    border-radius: 15px 15px 15px 15px;
+    background-color: rgb(253, 244, 232);
+    border: solid ;
+    padding: 10px;
+    margin: 2px;
+    width: auto;
+}
+
 
 a{
     text-decoration: none;
